Login and Signup pages

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,16 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Log In</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <ion-input required type="text" placeholder="Username"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input required type="password" placeholder="Password"></ion-input>
-  </ion-item>
-  <ion-col><ion-button shape="round" color="secondary" expand="block" fill="outline" (click)="login()">Log In</ion-button></ion-col>
-  <ion-col><ion-button shape="round" color="warning" expand="block" fill="outline" (click)="checkSession()">Log In</ion-button></ion-col>
+  <app-login-form
+    (loginAction)="login($event)"
+    (errorAction)="formError($event)"
+  ></app-login-form>
+  <ion-col><ion-button shape="round" color="warning" expand="block" fill="outline" (click)="goToSignup()">Sign Up?</ion-button></ion-col>
 </ion-content>
