--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,8 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-item><h5>Realtime Report Tracking APP</h5></ion-item>
+  <ion-col>
+    <ion-button shape="round" color="danger" expand="block" fill="outline" (click)="logout()">Logout</ion-button>
+  </ion-col>
 </ion-content>
