--- a/src/app/host-pages/host-list/host-list.page.html
+++ b/src/app/host-pages/host-list/host-list.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>hostList</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Host List
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
